# pyModeS978

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yaml  ci.yml  lint-and-test.yaml  publish-pypi.yaml  release.yaml
src/pyModeS978/: __init__.py  _aux_sv.py  _bits.py  _enums.py  _errors.py  _frame.py  _mode_status.py  _state_vector.py  _uncertainty.py
tests/: synth.py  test_bits.py  test_decode_assembly.py  test_decode_real_captures.py  test_frame.py  test_frame_real_captures.py  test_import.py  test_mode_status.py  test_mode_status_real_captures.py  test_state_vector.py  test_state_vector_real_captures.py  test_synthetic_frames.py  test_uncertainty.py
tests/fixtures/: uat-example.ndjson
