[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyModeS978"
dynamic = ["version"]
description = "Pure-Python decoder for UAT (978 MHz) frames"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brent I/O" },
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/BrentIO/pyModeS978"
Repository = "https://github.com/BrentIO/pyModeS978"
Issues = "https://github.com/BrentIO/pyModeS978/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyModeS978/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyModeS978"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
