[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyModeS978"
dynamic = ["version"]
description = "Pure-Python decoder for UAT (978 MHz) frames"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Brent I/O" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/BrentIO/pyModeS978"
Repository = "https://github.com/BrentIO/pyModeS978"
Issues = "https://github.com/BrentIO/pyModeS978/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyModeS978/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyModeS978"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
